CSS Nav Overflow Fix

--- a/css/mstyle.css
+++ b/css/mstyle.css
@@ -1,5 +1,5 @@
 /* --------------------------  Mobile Responsive Design  -------------------------- */
-@media (max-width: 1029px) {
+@media (max-width: 749px) {
   * {
     margin: 0;
     padding: 0;
@@ -14,28 +14,24 @@
   body {
     -ms-overflow-style: none;
     scrollbar-width: none;
+    overflow-x: hidden;
   }
 
   body::-webkit-scrollbar {
     display: none;
   }
+
   header {
     width: 100%;
-    position: sticky;
-    position: -webkit-sticky;
-    top: 0;
     display: flex;
-    justify-content: space-between;
-    text-align: center;
-    padding: 5px 20px;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 2% 6%;
     background-color: #6600ff;
     box-shadow: 0 2px 10px -5px rgba(0, 0, 0, 0.55);
-    z-index: 1;
   }
 
   .logo {
-    position: relative;
-    left: 1%;
     text-decoration: none;
     color: #fff;
     display: flex;
@@ -45,12 +41,6 @@
     letter-spacing: 5px;
   }
 
-  .far {
-    font-size: 10px;
-    /* padding-left: 13px; */
-    padding-top: 10px;
-  }
-
   .logo h4 {
     display: none;
     font-size: 12px;
@@ -58,11 +48,8 @@
   }
 
   .searchbar {
-    /* background-color: red; */
-    position: relative;
     width: 100%;
     padding: 10px;
-    left: 1%;
   }
 
   .searchbar input {
@@ -82,12 +69,10 @@
     /* position: relative; */
     /* margin-left: 31.5%; */
     padding: 5px 5px;
+    width: 100%;
   }
 
   .openbtn {
-    position: relative;
-    right: 0;
-    width: 40px;
     outline-style: none;
     border-style: none;
     background: none;
@@ -99,8 +84,8 @@
 
   .closebtn {
     position: absolute;
-    top: -1.8%;
-    right: 12.5%;
+    top: -0.2%;
+    right: 12%;
     font-size: 70px;
     color: #fff;
     font-size: 60px;
@@ -109,7 +94,7 @@
 
   .sidebar {
     height: 100%;
-    width: 0%;
+    width: 50%;
     position: fixed;
     z-index: 1;
     top: 0;
